--- a/package.json
+++ b/package.json
@@ -5,10 +5,21 @@
 	"main": "index.js",
 	"exports": {
 		".": "./index.js",
+		"./auto": "./auto.js",
+		"./polyfill": "./polyfill.js",
+		"./implementation": "./implementation.js",
+		"./shim": "./shim.js",
 		"./package.json": "./package.json"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"prepublish": "not-in-publish || npm run prepublishOnly",
+		"prepublishOnly": "safe-publish-latest",
+		"pretest": "npm run --silent lint",
+		"test": "npm run tests-only",
+		"posttest": "aud --production",
+		"tests-only": "nyc tape 'test/**/*.js'",
+		"lint": "eslint --ext=js,mjs .",
+		"postlint": "es-shim-api --bound && evalmd README.md"
 	},
 	"repository": {
 		"type": "git",
@@ -30,5 +41,32 @@
 	"bugs": {
 		"url": "https://github.com/es-shims/Array.prototype.toSorted/issues"
 	},
-	"homepage": "https://github.com/es-shims/Array.prototype.toSorted#readme"
+	"homepage": "https://github.com/es-shims/Array.prototype.toSorted#readme",
+	"devDependencies": {
+		"@es-shims/api": "^2.2.3",
+		"@ljharb/eslint-config": "^20.1.0",
+		"aud": "^1.1.5",
+		"auto-changelog": "^2.3.0",
+		"eslint": "^8.6.0",
+		"evalmd": "^0.0.19",
+		"functions-have-names": "^1.2.2",
+		"has-strict-mode": "^1.0.1",
+		"nyc": "^10.3.2",
+		"safe-publish-latest": "^2.0.0",
+		"tape": "^5.4.0"
+	},
+	"dependencies": {
+		"call-bind": "^1.0.2",
+		"define-properties": "^1.1.3",
+		"es-abstract": "^1.19.1",
+		"get-intrinsic": "^1.1.1"
+	},
+	"auto-changelog": {
+		"output": "CHANGELOG.md",
+		"template": "keepachangelog",
+		"unreleased": false,
+		"commitLimit": false,
+		"backfillLimit": false,
+		"hideCredit": true
+	}
 }
