--- a/package.json
+++ b/package.json
@@ -44,16 +44,16 @@
 	"homepage": "https://github.com/es-shims/Array.prototype.toSorted#readme",
 	"devDependencies": {
 		"@es-shims/api": "^2.2.3",
-		"@ljharb/eslint-config": "^20.1.0",
-		"aud": "^1.1.5",
-		"auto-changelog": "^2.3.0",
-		"eslint": "^8.6.0",
+		"@ljharb/eslint-config": "^20.2.3",
+		"aud": "^2.0.0",
+		"auto-changelog": "^2.4.0",
+		"eslint": "=8.8.0",
 		"evalmd": "^0.0.19",
 		"functions-have-names": "^1.2.2",
 		"has-strict-mode": "^1.0.1",
 		"nyc": "^10.3.2",
 		"safe-publish-latest": "^2.0.0",
-		"tape": "^5.4.0"
+		"tape": "^5.5.2"
 	},
 	"dependencies": {
 		"call-bind": "^1.0.2",
