--- a/.eslintrc
+++ b/.eslintrc
@@ -17,4 +17,13 @@
 			],
 		}],
 	},
+
+	"overrides": [
+		{
+			"files": "test/**",
+			"rules": {
+				"max-lines-per-function": "off",
+			},
+		},
+	]
 }
