--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"eslint": "=8.8.0",
 		"evalmd": "^0.0.19",
 		"functions-have-names": "^1.2.2",
+		"has": "^1.0.3",
 		"has-strict-mode": "^1.0.1",
 		"nyc": "^10.3.2",
 		"safe-publish-latest": "^2.0.0",
